usermgmt/service.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
  labels:
    app: user-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::006396608450:role/user-management.service
      labels:
        app: user-management
      name: user-management
    spec:
      containers:
      - name: user-management
        image: 006396608450.dkr.ecr.us-east-2.amazonaws.com/user-management:0.0.1-SNAPSHOT
        ports:
        - name: http
          containerPort: 9098
---
apiVersion: v1
kind: Service
metadata:
  name: user-management
  labels:
    app: user-management
spec:
  type: NodePort
  selector:
    app: user-management
  ports:
    - name: http
      protocol: TCP
      port: 9098
      targetPort: 9098

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-management
  annotations:
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /user-management/(.+)
            backend:
              serviceName: user-management
              servicePort: 9098
